Test/Files/Parser/FullParserTestCases/Bad/FullTests/Out/testcase04_02.out
<Type> ::= int
<Expr> ::= Integer
<Stmt> ::= <Type> ID = <Expr> ;
<Type> ::= boolean
<Expr> ::= false
<Stmt> ::= <Type> ID = <Expr> ;
<Type> ::= ID
<Expr> ::= new ID ( )
<Stmt> ::= <Type> ID = <Expr> ;
Parse error on line 3:
...w Discordia();chaos.everythingYouKnowIs
----------------------^
Expecting '=', 'ID'